# nota

./: .gitignore  1  PLAN-import-export.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: attachment.rs  export.rs  fs.rs  import.rs  mod.rs  session.rs  settings.rs  timer.rs  toggl.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql
src-tauri/src/models/: attachment.rs  mod.rs  session.rs  timer.rs
src/components/backup/: ExportDialog.tsx  ImportDialog.tsx  index.ts
src/components/editor/: NotesEditor.tsx
src/components/layout/: AppShell.tsx  Inspector.tsx  Sidebar.tsx  TitleBar.tsx  Workspace.tsx  index.ts
src/components/mobile/: MobileHeader.tsx  MobileLayout.tsx  SessionList.tsx  index.ts
src/components/session/: CreateSessionModal.tsx  DuplicateSessionModal.tsx  SessionDetail.tsx  SessionEmptyState.tsx  SessionHeaderTimer.tsx  SmartGoalCard.tsx  index.ts
src/components/settings/: SettingsModal.tsx
src/components/timer/: FocusMode.tsx  (+1 more)
src/hooks/: useMobile.ts  useTheme.ts
src/lib/: date.ts  tauri.ts  utils.ts
src/stores/: attachmentStore.ts  backupStore.ts  editorStore.ts  index.ts  sessionStore.ts  settingsStore.ts  timerStore.ts  togglStore.ts  uiStore.ts
src/types/: attachment.ts  index.ts  session.ts  settings.ts  timer.ts  toggl.ts
(+12 files in other folders)
